[gd_scene load_steps=42 format=2]

[ext_resource path="res://assets/chara/youmu/Youmu-Sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/battle_sys/hurtbox.gd" type="Script" id=2]
[ext_resource path="res://player/youmu.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/player/player_step.wav" type="AudioStream" id=4]
[ext_resource path="res://player/states/idle.gd" type="Script" id=5]
[ext_resource path="res://player/states/run.gd" type="Script" id=6]
[ext_resource path="res://player/states/fall.gd" type="Script" id=7]
[ext_resource path="res://player/states/jump.gd" type="Script" id=8]
[ext_resource path="res://player/states/double_jump.gd" type="Script" id=9]
[ext_resource path="res://player/states/air_attack.gd" type="Script" id=10]
[ext_resource path="res://player/states/dash.gd" type="Script" id=11]
[ext_resource path="res://player/states/dead.gd" type="Script" id=12]
[ext_resource path="res://player/states/cutscene.gd" type="Script" id=13]
[ext_resource path="res://player/states/hurt.gd" type="Script" id=14]
[ext_resource path="res://player/states/attack1.gd" type="Script" id=15]
[ext_resource path="res://player/states/charge.gd" type="Script" id=16]
[ext_resource path="res://player/states/charge_attack.gd" type="Script" id=17]
[ext_resource path="res://player/states/attack2.gd" type="Script" id=18]
[ext_resource path="res://player/states/attack3.gd" type="Script" id=19]
[ext_resource path="res://assets/audio/player/hurt_004.wav" type="AudioStream" id=20]
[ext_resource path="res://assets/audio/player/player_jump.wav" type="AudioStream" id=22]
[ext_resource path="res://assets/audio/player/se_graze.wav" type="AudioStream" id=23]
[ext_resource path="res://assets/audio/player/feet_28.wav" type="AudioStream" id=24]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 18 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
render_mode blend_premul_alpha;

uniform float aura_width = 1.0;
uniform vec3 aura_color;

void fragment() {
	vec4 col = texture(TEXTURE, UV);
	vec2 ps = TEXTURE_PIXEL_SIZE;
	float a;
	float maxa = col.a;
	float mina = col.a;

	a = texture(TEXTURE, UV + vec2(0.0, aura_width) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV + vec2(-aura_width, 0.0) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV + vec2(aura_width, 0.0) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	col.rgb *= col.a;

	COLOR = col;
	COLOR.rgb += aura_color.xyz * (maxa - mina);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/aura_width = 1.0
shader_param/aura_color = Vector3( 0, 0, 0 )

[sub_resource type="Animation" id=4]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 52, 53, 54, 55, 56, 57, 58, 59 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotator/hitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("states/air_attack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_anim_end"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 20, 21, 24, 47, 48 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotator/hitbox/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=6]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 34, 35, 37, 47, 48 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotator/hitbox2/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 38, 39, 40, 41, 42, 43, 45, 46, 47, 48 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotator/hitbox3/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=8]
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotator/hitbox3/CollisionPolygon2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=9]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=10]
resource_name = "death"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74 ]
}

[sub_resource type="Animation" id=11]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16 ]
}

[sub_resource type="Animation" id=12]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 51 ]
}

[sub_resource type="Animation" id=13]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=14]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14 ]
}

[sub_resource type="Animation" id=15]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/player:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/player:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="CircleShape2D" id=17]

[sub_resource type="CircleShape2D" id=18]
radius = 40.0

[node name="player" type="KinematicBody2D"]
position = Vector2( 0, -32 )
collision_layer = 128
script = ExtResource( 3 )

[node name="phsics_collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 14 )
shape = SubResource( 1 )

[node name="rotator" type="Node2D" parent="."]

[node name="player" type="Sprite" parent="rotator"]
material = SubResource( 3 )
position = Vector2( 20, 0 )
texture = ExtResource( 1 )
hframes = 8
vframes = 10
frame = 38

[node name="hitbox" type="Area2D" parent="rotator"]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="rotator/hitbox"]
polygon = PoolVector2Array( -0.594353, -7.44006, 66.8087, -25.2782, 71.0518, 1.83024, 34.6328, 25.6682, -14.6322, 14.8087 )
disabled = true

[node name="hitbox2" type="Area2D" parent="rotator"]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="rotator/hitbox2"]
polygon = PoolVector2Array( -14.1138, 0.300018, 54.1445, -7.43856, 85.0988, 1.49057, 54.1445, 8.43545 )
disabled = true

[node name="hitbox3" type="Area2D" parent="rotator"]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="rotator/hitbox3"]
polygon = PoolVector2Array( -34.4881, 23.4704, 4.29765, -20.5169, 85.6382, -21.6677, 39.9924, 23.2128 )
disabled = true

[node name="anim" type="AnimationPlayer" parent="."]
anims/air_attack = SubResource( 4 )
anims/attack1 = SubResource( 5 )
anims/attack2 = SubResource( 6 )
anims/attack3 = SubResource( 7 )
anims/charge_attack = SubResource( 8 )
anims/charge_ready = SubResource( 9 )
anims/death = SubResource( 10 )
anims/fall = SubResource( 11 )
anims/hit = SubResource( 12 )
anims/idle = SubResource( 13 )
anims/jump = SubResource( 14 )
anims/move = SubResource( 15 )

[node name="animfx" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 16 )

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 0
script = ExtResource( 2 )

[node name="collider" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 17 )

[node name="graze_area" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="graze_area"]
shape = SubResource( 18 )

[node name="dash_timer" type="Timer" parent="."]
one_shot = true

[node name="states" type="Node" parent="."]

[node name="idle" type="Node" parent="states"]
script = ExtResource( 5 )

[node name="run" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="states/run"]

[node name="fall" type="Node" parent="states"]
script = ExtResource( 7 )

[node name="jump" type="Node" parent="states"]
script = ExtResource( 8 )

[node name="double_jump" type="Node" parent="states"]
script = ExtResource( 9 )

[node name="air_attack" type="Node" parent="states"]
script = ExtResource( 10 )

[node name="dash" type="Node" parent="states"]
script = ExtResource( 11 )

[node name="Timer" type="Timer" parent="states/dash"]
wait_time = 0.05

[node name="cutscene" type="Node" parent="states"]
script = ExtResource( 13 )

[node name="dead" type="Node" parent="states"]
script = ExtResource( 12 )

[node name="death_timer" type="Timer" parent="states/dead"]

[node name="hurt" type="Node" parent="states"]
script = ExtResource( 14 )

[node name="attack1" type="Node" parent="states"]
script = ExtResource( 15 )

[node name="charge" type="Node" parent="states"]
script = ExtResource( 16 )

[node name="charge_attack" type="Node" parent="states"]
script = ExtResource( 17 )

[node name="Timer" type="Timer" parent="states/charge_attack"]
wait_time = 0.1

[node name="attack2" type="Node" parent="states"]
script = ExtResource( 18 )

[node name="attack3" type="Node" parent="states"]
script = ExtResource( 19 )

[node name="step" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )

[node name="graze" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )

[node name="dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )

[connection signal="area_entered" from="rotator/hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="rotator/hitbox2" to="." method="_on_hitbox2_area_entered"]
[connection signal="area_entered" from="rotator/hitbox3" to="." method="_on_hitbox3_area_entered"]
[connection signal="timeout" from="states/run/Timer" to="states/run" method="_on_Timer_timeout"]
[connection signal="timeout" from="states/dash/Timer" to="states/dash" method="_on_Timer_timeout"]
[connection signal="timeout" from="states/dead/death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="states/charge_attack/Timer" to="states/charge_attack" method="_on_Timer_timeout"]
